# Following

./: .env.example  .gitignore  AGENTS.md  PROGRESS.md  README.md  config.example.yaml  pyproject.toml
tests/: test_account_poller.py  test_adaptive_margin_wallet_ratio.py  test_allow_all_symbol_policy.py  test_be_reduce_rule.py  test_bitget_place_order_payload.py  test_circuit_breaker.py  test_circuit_breaker_drawdown.py  test_device_auth_relay.py  test_discussion_reply_filter.py  test_entry_fallback.py  test_entry_split_ratio.py  test_hybrid_parser.py  test_kill_switch.py  test_leverage_cap.py  test_llm_client_providers.py  test_llm_schema.py  test_manage_add_limit.py  test_move_sl_to_be.py  test_order_submission_alert.py  test_parser.py  test_plan_order_capability_probe.py  test_position_sizing.py  test_private_channel_parser.py  test_private_channel_threading.py  test_private_manage_guards.py  test_quantity_rounding.py  test_rate_limiter_backoff.py  test_readyz_ws_gate.py  test_reconciler_order_not_found.py  test_reconciler_partial_fill.py  test_reconciler_partial_fill_places_sl.py  test_reconciler_stale_cancel.py  test_reconciler_tp_split.py  test_risk.py  test_risk_daemon_api_burst.py  test_risk_daemon_sl_autofix_then_panic.py  test_risk_daemon_stoploss_autofix.py  test_risk_daemon_tracked_autoprotect.py  test_risk_stoploss_required.py  test_risk_toggle_email_alert.py  (+12 more)
trader/: __init__.py  __main__.py  account_poller.py  alerts.py  bitget_client.py  config.py  device_auth_relay.py  discussion_filter.py  email_alert.py  entry_fallback.py  executor.py  kill_switch.py  (+32 more)
(+1 files in other folders)
